# Cube-Net

./: .gitignore  Dockerfile  README.md  check_solved.py  compile_scrambler.sh  cross_training.ipynb  cross_training_env.ipynb  cube-net-theory.md  cube_bindings.py  docker_training.py  generate_batch.py  model_cross.py  train_cross.py  train_cross_until_solved.py
cross/: Cargo.toml
cross/src/: cubie_converter.rs  main.rs  parse.rs  solve.rs  verify_cross.rs
cube/: Cargo.toml
cube/src/: lib.rs  moves.rs  parse.rs  rotation.rs  solve.rs  verify_cross.rs
cube_move_library/: Cargo.toml
cube_move_library/src/: lib.rs  moves.rs
json/: cross_solution.json  scrambled_cube_states.json
scrambler/: Cargo.toml
scrambler/src/: main.rs
scripts/: apply_scramble.sh  check_solved.sh  compile_rust_cube.sh  compile_scrambler.sh  compile_solution_verifier.sh  is_cross_solved.sh  solve_cross.sh
solution_verifier/: Cargo.toml
solution_verifier/src/: main.rs  parse.rs
training/: cross_solution.json  cross_training_env.ipynb  cube_bindings.py  early_stopping.py  model_cross.py  plot_rubiks.py  scrambled_cube_states.json  train_cross.py  train_cross_until_solved.py
training/json/: cross_solution.json  scrambled_cube_states.json
training/train_scripts/: apply_scramble.sh  check_solved.sh  is_cross_solved.sh  solve_cross.sh
