[package]
name = "scrambler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cube_move_library = { path = "../cube_move_library" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"